# test-repo-rundagger

./: CHANGELOG.md  Dockerfile  README.md  config.yaml  package.json  release-please-config.json
.dagger/: firestarter_build_images.yaml  pyproject.toml  struct.yaml
.dagger/firestarter/workflows/local/: __init__.py
.dagger/firestarter/workflows/local_pr_verify/: __init__.py
.github/: CODEOWNERS
.github/workflows/: build_image  build_image.yml  on-premises.yml  pr-verify.yml  release-please.yaml
foo/: pyproject.toml
