[tool.poetry]
name = "firestarter"
version = "0.1.0"
description = ""
authors = ["Javier Gomez Rodriguez <javier.gomez@prefapp.es>"]

[tool.poetry.scripts]
dagger = "firestarter.cli.parser:parse"

[tool.poetry.dependencies]
python = "^3.11"
firestarter-workflows = {git = "https://github.com/prefapp/firestarter-workflows", rev = "main", extras=["on-premises"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
