[tool.poetry]
name = "firestarter"
version = "0.1.0"
description = ""
authors = ["Javier Gomez Rodriguez <javier.gomez@prefapp.es>"]

[tool.poetry.scripts]
firestarter = "firestarter.cli:main"

[tool.poetry.dependencies]
python = "^3.10"
firestarter-workflows = {git = "https://github.com/prefapp/firestarter-workflows", rev = "main", extras=["build_images"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
