[tool.poetry]
name = "firestarter"
version = "0.1.0"
description = ""
authors = ["Javier Gomez Rodriguez <javier.gomez@prefapp.es>"]

[tool.poetry.scripts]
firestarter = "firestarter.cli:main"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.build_images]
optional = true

[tool.poetry.group.build_images.dependencies]
firestarter-workflows = {git = "https://github.com/prefapp/firestarter-workflows", rev = "main", extras=["build_images"]}

[tool.poetry.group.pr_verify]
optional = true

[tool.poetry.group.pr_verify.dependencies]
firestarter-workflows = {git = "https://github.com/prefapp/firestarter-workflows", rev = "main", extras=["pr_verify"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
