[tool.poetry]
name = "foo"
version = "0.1.0"
description = ""
authors = ["Jose Alvarez <jose.alvarez@prefapp.es>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
firestarter-workflows = {git = "https://github.com/prefapp/firestarter-workflows.git", rev = "main"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
